app/src/main/java/com/example/jokeapp/domain/Errors/BaseJokeFailure.kt
package com.example.jokeapp.domain.Errors

abstract class BaseJokeFailure : JokeFailure {

}